--- a/templates/reports.html
+++ b/templates/reports.html
@@ -12,6 +12,9 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     rel="stylesheet"
   />
+  <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}" />
+  <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}" />
+  <link rel="apple-touch-icon" href="{{ url_for('static', filename='favicon.ico') }}" />
   <style>
     @media (max-width: 640px) {
       .container { padding-left: 0.5rem; padding-right: 0.5rem; }
